Clean up et ajout des commentaire